[gd_scene load_steps=5 format=2]

[ext_resource path="res://test/hobo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GDScript/EventLogUI.gd" type="Script" id=2]


[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[node name="EventLogUI" type="PanelContainer"]
margin_right = 361.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 387.445, 62.1694 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 354.0
margin_bottom = 44.0
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 290.0
margin_bottom = 37.0
rect_min_size = Vector2( 290, 0 )
custom_constants/separation = 10

[node name="content_log" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 290.0
margin_bottom = 15.0
rect_min_size = Vector2( 290, 0 )
custom_fonts/font = SubResource( 1 )
text = "손님 방문 : 손님 잔잔이 방문했습니다."

[node name="content_date" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 290.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "2000년 12월 31일 24:24"

[node name="track_btn" type="Button" parent="HBoxContainer"]
margin_left = 300.0
margin_right = 345.0
margin_bottom = 37.0
text = "Track"
